--- a/app/components/books.manager.component.html
+++ b/app/components/books.manager.component.html
@@ -1,6 +1,5 @@
 <h1>{{title}}</h1>
 
 <div class="component">
-    <editura [textLevel1]="text" (changed)="onChange($event)">
-    </editura>
+    <editura> </editura>
 </div>
